--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
   <!-- Optional: Add a footer with additional information -->
   <footer>
-    <p>&copy; 2023 Hackers Collective. All rights reserved.</p>
+     <p>
+      <a href="https://github.com/hackers-collective" target="_blank" rel="noopener noreferrer">GitHub</a>
+      &copy; 2023 Hackers Collective. All rights reserved.
+    </p>
   </footer>
 
 </body>
