--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <!-- Add your SEO meta tags here -->
   <meta name="description" content="Hackers Collective bridges the gap between technology and innovation by providing open-source solutions and simplifying technology. Our ultimate goal is to accelerate progress and create a better future for all.">
 
+  <!-- Include Inter font CSS -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
   <!-- Schema.org markup for organization -->
   <script type="application/ld+json">
   {
@@ -19,6 +22,24 @@
   }
   </script>
 
+<style>
+    /* Apply Inter font to body */
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+
+    /* Add additional CSS styles as needed */
+    h1 {
+      font-size: 24px;
+      font-weight: 700;
+    }
+
+    p {
+      font-size: 16px;
+      font-weight: 400;
+    }
+  </style>
+
   <!-- Your CSS stylesheets and JavaScript files go here -->
 
 </head>
@@ -27,12 +48,12 @@
 
   <h1>Hackers Collective</h1>
   <p>At Hackers Collective, our mission is to bridge the gap between technology and innovation. We believe that every engineer and researcher should have access to the best tools and resources to drive progress and make meaningful contributions to their field. By providing open-source solutions and simplifying technology, we empower our community to innovate without barriers. Our ultimate goal is to accelerate progress and create a better future for all.</p>
-  
+
   <!-- Add more HTML content as needed -->
 
   <!-- Optional: Add a footer with additional information -->
   <footer>
-     <p>
+    <p>
       <a href="https://github.com/hackers-collective" target="_blank" rel="noopener noreferrer">GitHub</a>
       &copy; 2023 Hackers Collective. All rights reserved.
     </p>
