--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
   }
   </script>
 
-<style>
+  <style>
     /* Apply Inter font to body */
     body {
       font-family: 'Inter', sans-serif;
+      background-color: #fff;
+      color: #000;
+      margin: 0;
+      padding: 20px;
     }
 
     /* Add additional CSS styles as needed */
@@ -33,6 +37,26 @@
     p {
       font-size: 16px;
       font-weight: 400;
+      line-height: 1.6;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 30px;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+
+    footer {
+      font-size: 14px;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    footer a {
+      color: #000;
+      text-decoration: none;
+      font-weight: 700;
     }
   </style>
 
@@ -42,6 +66,7 @@
 <body>
   <!-- Your website content goes here -->
 
+  <h1>Hackers Collective</h1>
   <p>At Hackers Collective, our mission is to bridge the gap between technology and innovation. We believe that every engineer and researcher should have access to the best tools and resources to drive progress and make meaningful contributions to their field. By providing open-source solutions and simplifying technology, we empower our community to innovate without barriers. Our ultimate goal is to accelerate progress and create a better future for all.</p>
 
   <!-- Add more HTML content as needed -->
