--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <!-- Include Inter font CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
+  <!-- Add favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <!-- Schema.org markup for organization -->
   <script type="application/ld+json">
   {
