--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
       text-decoration: none;
       font-weight: 700;
     }
+
+    .cta-button {
+      display: inline-block;
+      padding: 10px 20px;
+      font-size: 20px;
+      font-weight: 700;
+      text-decoration: none;
+      background-color: #000;
+      color: #fff;
+      border-radius: 5px;
+    }
   </style>
 
   <!-- Your CSS stylesheets and JavaScript files go here -->
@@ -71,6 +82,9 @@
 
   <h1>Hackers Collective</h1>
   <p>At Hackers Collective, our mission is to bridge the gap between technology and innovation. We believe that every engineer and researcher should have access to the best tools and resources to drive progress and make meaningful contributions to their field. By providing open-source solutions and simplifying technology, we empower our community to innovate without barriers. Our ultimate goal is to accelerate progress and create a better future for all.</p>
+
+  <!-- Add a Call to Action -->
+  <a class="cta-button" href="https://github.com/hackers-collective" target="_blank" rel="noopener noreferrer">Get Started Now</a>
 
   <!-- Add more HTML content as needed -->
 
